--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "browser-sync": "^2.26.5",
     "gulp": "^4.0.2",
+    "gulp-concat-css": "^3.1.0",
     "node-sass": "^4.12.0"
   },
   "devDependencies": {
